LocalityLB/manifests/helloworld-sample/base/sample-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helloworld
  labels:
    istio-injection: enabled
    istio.io/rev: default
