LocalityLB/manifests/helloworld-sample/base/helloworld-igw-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: helloworld-igw
  namespace: istio-system
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: Edge
